# CVSLogger

./: .clang-format  CMakeLists.txt  install.cmake
cmake/: BuildNumber.cmake  CVSInstall.cmake  CVSLoggerConfig.cmake.in  GitHelpers.cmake
include/cvs/logger/: argumentpreprocessor.hpp  configtypes.h  configtypes.hpp  defaultfactory.h  ilogger.h  ilogger.hpp  loggable.hpp  logger.h  loggerfactory.h  loggerfactory.hpp  logging.h  logging.hpp  opencvhelper.hpp
include/cvs/logger/tools/: fpslogger.hpp
install/: CVSLoggerConfig.cmake.in
src/: configtypes.cpp  defaultfactory.cpp  ilogger.cpp  logger.cpp  loggerfactory.cpp  logging.cpp  opencvhelper.cpp
src/cvs/logger/: logger.cpp  logger.h
src/default/: defaultfactory.cpp  defaultfactory.hpp
src/tools/: fpslogger.cpp
test/: CMakeLists.txt  factory_test.cpp  opencv_cfg_test.cpp  opencv_test.cpp  test.cpp
